# bonsai_example

./: bonsai_example.opam  readme.md
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/nightly/: Dockerfile
.github/: actions.yml
.github/workflows/: docker_test.yml
client/: compose_message.ml  dune  main.ml  room_list_panel.ml
common/: dune
scripts/: build.sh  build_opt.sh  commit_and_push.sh  fmt.sh  run.sh  watch.sh
server/src/: dune
